Color and Typography

--- a/css/materialyou.css
+++ b/css/materialyou.css
@@ -24,99 +24,126 @@ html body {
 
 /* roboto-regular - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: normal;
   font-weight: 400;
   src: local(""), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-regular.woff2") format("woff2"), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-regular.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 /* roboto-italic - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: italic;
   font-weight: 400;
   src: local(""), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-italic.woff2") format("woff2"), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-italic.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 /* roboto-700 - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: normal;
   font-weight: 700;
   src: local(""), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-700.woff2") format("woff2"), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-700.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 /* roboto-700italic - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: italic;
   font-weight: 700;
   src: local(""), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-700italic.woff2") format("woff2"), url("../fonts/roboto-v29-latin-ext_latin_greek_cyrillic-700italic.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 :root {
-  --md-sys-typescale-display-large-font: Roboto;
+  --md-sys-typescale-display-large-font: Roboto, sans-serif;
   --md-sys-typescale-display-large-line-height: 4rem;
   --md-sys-typescale-display-large-size: 3.5625rem;
   --md-sys-typescale-display-large-weight: 400;
-  --md-sys-typescale-display-medium-font: Roboto;
+  --md-sys-typescale-display-medium-font: Roboto, sans-serif;
   --md-sys-typescale-display-medium-line-height: 3.25rem;
   --md-sys-typescale-display-medium-size: 2.8125rem;
   --md-sys-typescale-display-medium-weight: 400;
-  --md-sys-typescale-display-small-font: Roboto;
+  --md-sys-typescale-display-small-font: Roboto, sans-serif;
   --md-sys-typescale-display-small-line-height: 2.75rem;
   --md-sys-typescale-display-small-size: 2.25rem;
   --md-sys-typescale-display-small-weight: 400;
-  --md-sys-typescale-headline-large-font: Roboto;
+  --md-sys-typescale-headline-large-font: Roboto, sans-serif;
   --md-sys-typescale-headline-large-line-height: 2.5rem;
   --md-sys-typescale-headline-large-size: 2rem;
   --md-sys-typescale-headline-large-weight: 400;
-  --md-sys-typescale-headline-medium-font: Roboto;
+  --md-sys-typescale-headline-medium-font: Roboto, sans-serif;
   --md-sys-typescale-headline-medium-line-height: 2.25rem;
   --md-sys-typescale-headline-medium-size: 1.75rem;
   --md-sys-typescale-headline-medium-weight: 400;
-  --md-sys-typescale-headline-small-font: Roboto;
+  --md-sys-typescale-headline-small-font: Roboto, sans-serif;
   --md-sys-typescale-headline-small-line-height: 2rem;
   --md-sys-typescale-headline-small-size: 1.5rem;
   --md-sys-typescale-headline-small-weight: 400;
-  --md-sys-typescale-title-large-font: Roboto;
+  --md-sys-typescale-title-large-font: Roboto, sans-serif;
   --md-sys-typescale-title-large-line-height: 1.75rem;
   --md-sys-typescale-title-large-size: 1.375rem;
   --md-sys-typescale-title-large-weight: 400;
-  --md-sys-typescale-title-medium-font: Roboto;
+  --md-sys-typescale-title-medium-font: Roboto, sans-serif;
   --md-sys-typescale-title-medium-line-height: 1.5rem;
   --md-sys-typescale-title-medium-size: 1rem;
   --md-sys-typescale-title-medium-weight: 500;
-  --md-sys-typescale-title-small-font: Roboto;
+  --md-sys-typescale-title-small-font: Roboto, sans-serif;
   --md-sys-typescale-title-small-line-height: 1.25rem;
   --md-sys-typescale-title-small-size: 0.875rem;
   --md-sys-typescale-title-small-weight: 500;
-  --md-sys-typescale-label-large-font: Roboto;
+  --md-sys-typescale-label-large-font: Roboto, sans-serif;
   --md-sys-typescale-label-large-line-height: 1.25rem;
   --md-sys-typescale-label-large-size: 0.875rem;
   --md-sys-typescale-label-large-weight: 500;
-  --md-sys-typescale-label-medium-font: Roboto;
+  --md-sys-typescale-label-medium-font: Roboto, sans-serif;
   --md-sys-typescale-label-medium-line-height: 1rem;
   --md-sys-typescale-label-medium-size: 0.75rem;
   --md-sys-typescale-label-medium-weight: 500;
-  --md-sys-typescale-label-small-font: Roboto;
+  --md-sys-typescale-label-small-font: Roboto, sans-serif;
   --md-sys-typescale-label-small-line-height: 0.375rem;
   --md-sys-typescale-label-small-size: 0.6875rem;
   --md-sys-typescale-label-small-weight: 500;
-  --md-sys-typescale-body-large-font: Roboto;
+  --md-sys-typescale-body-large-font: Roboto, sans-serif;
   --md-sys-typescale-body-large-line-height: 1.5rem;
   --md-sys-typescale-body-large-size: 1rem;
   --md-sys-typescale-body-large-weight: 400;
-  --md-sys-typescale-body-medium-font: Roboto;
+  --md-sys-typescale-body-medium-font: Roboto, sans-serif;
   --md-sys-typescale-body-medium-line-height: 1.25rem;
   --md-sys-typescale-body-medium-size: 0.875rem;
   --md-sys-typescale-body-medium-weight: 400;
-  --md-sys-typescale-body-small-font: Roboto;
+  --md-sys-typescale-body-small-font: Roboto, sans-serif;
   --md-sys-typescale-body-small-line-height: 1rem;
   --md-sys-typescale-body-small-size: 0.75rem;
   --md-sys-typescale-body-small-weight: 400; }
 
 html body {
   font-family: var(--md-sys-typescale-body-medium-font);
-  font-size: var(--md-sys-typescale-body-medium-size);
   line-height: var(--md-sys-typescale-body-medium-line-height);
+  font-size: var(--md-sys-typescale-body-medium-size);
   font-weight: var(--md-sys-typescale-body-medium-weight); }
+  html body h1 {
+    font-family: var(--md-sys-typescale-display-medium-font);
+    line-height: var(--md-sys-typescale-display-medium-line-height);
+    font-size: var(--md-sys-typescale-display-medium-size);
+    font-weight: var(--md-sys-typescale-display-medium-weight); }
+  html body h2 {
+    font-family: var(--md-sys-typescale-headline-medium-font);
+    line-height: var(--md-sys-typescale-headline-medium-line-height);
+    font-size: var(--md-sys-typescale-headline-medium-size);
+    font-weight: var(--md-sys-typescale-headline-medium-weight); }
+  html body h3 {
+    font-family: var(--md-sys-typescale-headline-small-font);
+    line-height: var(--md-sys-typescale-headline-small-line-height);
+    font-size: var(--md-sys-typescale-headline-small-size);
+    font-weight: var(--md-sys-typescale-headline-small-weight); }
+  html body h4 {
+    font-family: var(--md-sys-typescale-title-medium-font);
+    line-height: var(--md-sys-typescale-title-medium-line-height);
+    font-size: var(--md-sys-typescale-title-medium-size);
+    font-weight: var(--md-sys-typescale-title-medium-weight); }
+  html body h5, html body h6 {
+    font-family: var(--md-sys-typescale-title-small-font);
+    line-height: var(--md-sys-typescale-title-small-line-height);
+    font-size: var(--md-sys-typescale-title-small-size);
+    font-weight: var(--md-sys-typescale-title-small-weight); }
+  html body a {
+    text-decoration: none; }
 
 :root {
   --md-sys-color-primary-light: #6750A4;
@@ -432,5 +459,25 @@ html body {
 html body {
   background-color: var(--md-sys-color-background);
   color: var(--md-sys-color-on-background); }
+  html body h1, html body h2 {
+    color: var(--md-sys-color-primary); }
+  html body a:link, html body a:visited {
+    color: var(--md-sys-color-primary); }
+  html body a:hover, html body a:active {
+    background-color: var(--md-sys-color-primary-container);
+    color: var(--md-sys-color-on-primary-container); }
+
+body div.materialyou-layout-container header.materialyou-top-app-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  border: 1px solid #d00; }
+body.toolbar-fixed div.materialyou-layout-container header.materialyou-top-app-bar {
+  top: 39px; }
+body.toolbar-fixed.toolbar-tray-open.toolbar-horizontal div.materialyou-layout-container header.materialyou-top-app-bar {
+  top: 79px; }
+body.toolbar-fixed.toolbar-tray-open.toolbar-vertical div.materialyou-layout-container header.materialyou-top-app-bar {
+  left: 15rem; }
 
 /*# sourceMappingURL=materialyou.css.map */
