--- a/scss/elements/_typograhpy.scss
+++ b/scss/elements/_typograhpy.scss
@@ -18,7 +18,7 @@ html {
 
 /* roboto-regular - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: normal;
   font-weight: 400;
   src: local(''),
@@ -27,7 +27,7 @@ html {
 }
 /* roboto-italic - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: italic;
   font-weight: 400;
   src: local(''),
@@ -36,7 +36,7 @@ html {
 }
 /* roboto-700 - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: normal;
   font-weight: 700;
   src: local(''),
@@ -45,7 +45,7 @@ html {
 }
 /* roboto-700italic - latin-ext_latin_greek_cyrillic */
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto, sans-serif';
   font-style: italic;
   font-weight: 700;
   src: local(''),
@@ -54,73 +54,95 @@ html {
 }
 
 :root {
-  --md-sys-typescale-display-large-font: Roboto;
+  --md-sys-typescale-display-large-font: Roboto, sans-serif;
   --md-sys-typescale-display-large-line-height: 4rem;
   --md-sys-typescale-display-large-size: 3.5625rem;
   --md-sys-typescale-display-large-weight: 400;
-  --md-sys-typescale-display-medium-font: Roboto;
+  --md-sys-typescale-display-medium-font: Roboto, sans-serif;
   --md-sys-typescale-display-medium-line-height: 3.25rem;
   --md-sys-typescale-display-medium-size: 2.8125rem;
   --md-sys-typescale-display-medium-weight: 400;
-  --md-sys-typescale-display-small-font: Roboto;
+  --md-sys-typescale-display-small-font: Roboto, sans-serif;
   --md-sys-typescale-display-small-line-height: 2.75rem;
   --md-sys-typescale-display-small-size: 2.25rem;
   --md-sys-typescale-display-small-weight: 400;
-  --md-sys-typescale-headline-large-font: Roboto;
+  --md-sys-typescale-headline-large-font: Roboto, sans-serif;
   --md-sys-typescale-headline-large-line-height: 2.5rem;
   --md-sys-typescale-headline-large-size: 2rem;
   --md-sys-typescale-headline-large-weight: 400;
-  --md-sys-typescale-headline-medium-font: Roboto;
+  --md-sys-typescale-headline-medium-font: Roboto, sans-serif;
   --md-sys-typescale-headline-medium-line-height: 2.25rem;
   --md-sys-typescale-headline-medium-size: 1.75rem;
   --md-sys-typescale-headline-medium-weight: 400;
-  --md-sys-typescale-headline-small-font: Roboto;
+  --md-sys-typescale-headline-small-font: Roboto, sans-serif;
   --md-sys-typescale-headline-small-line-height: 2rem;
   --md-sys-typescale-headline-small-size: 1.5rem;
   --md-sys-typescale-headline-small-weight: 400;
-  --md-sys-typescale-title-large-font: Roboto;
+  --md-sys-typescale-title-large-font: Roboto, sans-serif;
   --md-sys-typescale-title-large-line-height: 1.75rem;
   --md-sys-typescale-title-large-size: 1.375rem;
   --md-sys-typescale-title-large-weight: 400;
-  --md-sys-typescale-title-medium-font: Roboto;
+  --md-sys-typescale-title-medium-font: Roboto, sans-serif;
   --md-sys-typescale-title-medium-line-height: 1.5rem;
   --md-sys-typescale-title-medium-size: 1rem;
   --md-sys-typescale-title-medium-weight: 500;
-  --md-sys-typescale-title-small-font: Roboto;
+  --md-sys-typescale-title-small-font: Roboto, sans-serif;
   --md-sys-typescale-title-small-line-height: 1.25rem;
   --md-sys-typescale-title-small-size: 0.875rem;
   --md-sys-typescale-title-small-weight: 500;
-  --md-sys-typescale-label-large-font: Roboto;
+  --md-sys-typescale-label-large-font: Roboto, sans-serif;
   --md-sys-typescale-label-large-line-height: 1.25rem;
   --md-sys-typescale-label-large-size: 0.875rem;
   --md-sys-typescale-label-large-weight: 500;
-  --md-sys-typescale-label-medium-font: Roboto;
+  --md-sys-typescale-label-medium-font: Roboto, sans-serif;
   --md-sys-typescale-label-medium-line-height: 1rem;
   --md-sys-typescale-label-medium-size: 0.75rem;
   --md-sys-typescale-label-medium-weight: 500;
-  --md-sys-typescale-label-small-font: Roboto;
+  --md-sys-typescale-label-small-font: Roboto, sans-serif;
   --md-sys-typescale-label-small-line-height: 0.375rem;
   --md-sys-typescale-label-small-size: 0.6875rem;
   --md-sys-typescale-label-small-weight: 500;
-  --md-sys-typescale-body-large-font: Roboto;
+  --md-sys-typescale-body-large-font: Roboto, sans-serif;
   --md-sys-typescale-body-large-line-height: 1.5rem;
   --md-sys-typescale-body-large-size: 1rem;
   --md-sys-typescale-body-large-weight: 400;
-  --md-sys-typescale-body-medium-font: Roboto;
+  --md-sys-typescale-body-medium-font: Roboto, sans-serif;
   --md-sys-typescale-body-medium-line-height: 1.25rem;
   --md-sys-typescale-body-medium-size: 0.875rem;
   --md-sys-typescale-body-medium-weight: 400;
-  --md-sys-typescale-body-small-font: Roboto;
+  --md-sys-typescale-body-small-font: Roboto, sans-serif;
   --md-sys-typescale-body-small-line-height: 1rem;
   --md-sys-typescale-body-small-size: 0.75rem;
   --md-sys-typescale-body-small-weight: 400;
 }
 
+@mixin materialyou-typography($type, $size) {
+  font-family: var(--md-sys-typescale-#{$type}-#{$size}-font);
+  line-height: var(--md-sys-typescale-#{$type}-#{$size}-line-height);
+  font-size: var(--md-sys-typescale-#{$type}-#{$size}-size);
+  font-weight: var(--md-sys-typescale-#{$type}-#{$size}-weight);
+}
+
 html {
   body {
-    font-family: var(--md-sys-typescale-body-medium-font);
-    font-size: var(--md-sys-typescale-body-medium-size);
-    line-height: var(--md-sys-typescale-body-medium-line-height);
-    font-weight: var(--md-sys-typescale-body-medium-weight);
+    @include materialyou-typography(body, medium);
+    h1 {
+      @include materialyou-typography(display, medium);
+    }
+    h2 {
+      @include materialyou-typography(headline, medium);
+    }
+    h3 {
+      @include materialyou-typography(headline, small);
+    }
+    h4 {
+      @include materialyou-typography(title, medium);
+    }
+    h5, h6 {
+      @include materialyou-typography(title, small);
+    }
+    a {
+      text-decoration: none;
+    }
   }
 }
