--- a/scss/materialyou.scss
+++ b/scss/materialyou.scss
@@ -1,3 +1,5 @@
 @import "elements/_layout.scss";
 @import "elements/_typograhpy.scss";
 @import "elements/_color.scss";
+
+@import "components/_top_app_bar.scss";
