--- a/scss/components/_top_app_bar.scss
+++ b/scss/components/_top_app_bar.scss
@@ -1,15 +1,3 @@
-@mixin materialyou-top-app-bar {
-  div {
-    &.materialyou-layout-container {
-      header {
-        &.materialyou-top-app-bar {
-          @content
-        }
-      }
-    }
-  }
-}
-
 @mixin materialyou-top-app-bar--small {
   height: 4rem;
   padding-left: 1rem;
@@ -19,12 +7,6 @@
   color: var(--md-sys-color-on-background);
   @include materialyou-typography(title, large);
   transition: background-color 250ms;
-  &.document-scrolled {
-    z-index: 32;
-    background-color: var(--md-sys-color-secondary-container);
-    color: var(--md-sys-color-on-secondary-container);
-    transition: background-color 250ms;
-  }
   div {
     &.region {
       padding-top: 1.125rem;
@@ -43,35 +25,28 @@
 }
 
 body {
-  @include materialyou-top-app-bar {
-    top: 0;
-    left: 0;
-    right: 0;
-  }
-  &.toolbar-fixed {
-    @include materialyou-top-app-bar {
-      position: fixed;
-      top: 39px;
-    }
-    &.toolbar-tray-open {
-      &.toolbar-horizontal {
-        @include materialyou-top-app-bar {
-          top: 79px;
-        }
-      }
-      &.toolbar-vertical {
-        @include materialyou-top-app-bar {
-          left: 15rem;
+  div {
+    &.materialyou-layout-container {
+      header {
+        &.materialyou-top-app-bar {
+          border: 1px dashed #d00;
+          @include materialyou-top-app-bar--small;
         }
       }
     }
   }
-  &.materialyou-top-app-bar-fixed {
-    @include materialyou-top-app-bar {
-      position: fixed;
+  &.document-scrolled {
+    div {
+      &.materialyou-layout-container {
+        header {
+          &.materialyou-top-app-bar {
+            z-index: 32;
+            background-color: var(--md-sys-color-secondary-container);
+            color: var(--md-sys-color-on-secondary-container);
+            transition: background-color 250ms;
+          }
+        }
+      }
     }
-  }
-  @include materialyou-top-app-bar {
-    @include materialyou-top-app-bar--small;
   }
 }
