--- a/scss/materialyou.scss
+++ b/scss/materialyou.scss
@@ -3,3 +3,5 @@
 @import "elements/_color.scss";
 
 @import "components/_top_app_bar.scss";
+@import "components/_button.scss";
+@import "components/_menu.scss";
