--- a/css/materialyou.css
+++ b/css/materialyou.css
@@ -21,6 +21,12 @@ html body {
     padding-top: 4.5rem; }
   html body.toolbar-vertical.document-scrolled-beyond-bar div.materialyou-layout-container header.materialyou-top-app-bar {
     position: fixed; }
+    @media (max-height: 599px) {
+      html body.toolbar-vertical.document-scrolled-beyond-bar div.materialyou-layout-container header.materialyou-top-app-bar {
+        top: 0; } }
+    @media (max-width: 839px) {
+      html body.toolbar-vertical.document-scrolled-beyond-bar div.materialyou-layout-container header.materialyou-top-app-bar {
+        top: 0; } }
   html body.toolbar-fixed div.materialyou-layout-container {
     padding-top: 5rem; }
   html body.toolbar-fixed div.materialyou-layout-container header.materialyou-top-app-bar {
@@ -172,6 +178,26 @@ html body {
     font-weight: var(--md-sys-typescale-title-small-weight); }
   html body a {
     text-decoration: none; }
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/MaterialIcons-Regular.woff2) format("woff2"), url(../fonts/MaterialIcons-Regular.woff) format("woff"); }
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased; }
 
 :root {
   --md-sys-color-primary-light: #6750A4;
@@ -496,7 +522,6 @@ html body {
     color: var(--md-sys-color-on-primary-container); }
 
 body div.materialyou-layout-container header.materialyou-top-app-bar {
-  border: 1px dashed #d00;
   height: 4rem;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -522,5 +547,111 @@ body.document-scrolled div.materialyou-layout-container header.materialyou-top-a
   background-color: var(--md-sys-color-secondary-container);
   color: var(--md-sys-color-on-secondary-container);
   transition: background-color 250ms; }
+
+body div.materialyou-layout-container header.materialyou-top-app-bar div.region div.block {
+  float: left; }
+body div.materialyou-layout-container header.materialyou-top-app-bar div.region nav.navigation {
+  float: right; }
+  body div.materialyou-layout-container header.materialyou-top-app-bar div.region nav.navigation div.materialyou-button.materialyou-flat-button.materialyou-menu-button {
+    float: right;
+    padding-top: 0;
+    padding-bottom: 0; }
+  @media (min-width: 840px) and (min-height: 600px) {
+    body div.materialyou-layout-container header.materialyou-top-app-bar div.region nav.navigation ul.menu {
+      margin: 0;
+      padding: 0;
+      list-style: none; }
+      body div.materialyou-layout-container header.materialyou-top-app-bar div.region nav.navigation ul.menu li.menu-item {
+        display: inline-block;
+        margin: 0 0 0 1rem;
+        padding: 0;
+        list-style: none; } }
+
+.materialyou-button {
+  font-family: var(--md-sys-typescale-label-large-font);
+  line-height: var(--md-sys-typescale-label-large-line-height);
+  font-size: var(--md-sys-typescale-label-large-size);
+  font-weight: var(--md-sys-typescale-label-large-weight);
+  padding: 0.625rem 1.25rem;
+  border-radius: 1.25rem;
+  border: none;
+  text-align: center;
+  box-shadow: none;
+  z-index: 0;
+  cursor: pointer;
+  min-width: 3rem; }
+  .materialyou-button.materialyou-submit-button {
+    background-color: var(--md-sys-color-primary);
+    color: var(--md-sys-color-on-primary); }
+  .materialyou-button.materialyou-flat-button {
+    background: none;
+    color: var(--md-sys-color-primary);
+    padding-left: 0.75rem;
+    padding-right: 0.75rem; }
+    .materialyou-button.materialyou-flat-button:hover {
+      background-color: var(--md-sys-color-primary-container); }
+  .materialyou-button.materialyou-icon-button {
+    min-width: 0;
+    width: 24px;
+    height: 24px; }
+
+nav.materialyou-menu ul.menu {
+  display: none;
+  clear: both; }
+  @media (max-height: 599px) {
+    nav.materialyou-menu ul.menu {
+      z-index: 32;
+      background-color: var(--md-sys-color-surface);
+      min-width: 7rem;
+      max-width: 17.5rem;
+      margin: 0;
+      border: 0;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem; }
+      nav.materialyou-menu ul.menu.materialyou-menu-open {
+        display: block; }
+      nav.materialyou-menu ul.menu li.menu-item {
+        margin: 0;
+        padding: 0; }
+        nav.materialyou-menu ul.menu li.menu-item a {
+          display: block;
+          color: var(--mad-sys-color-on-surface);
+          font-family: var(--md-sys-typescale-label-large-font);
+          line-height: var(--md-sys-typescale-label-large-line-height);
+          font-size: var(--md-sys-typescale-label-large-size);
+          font-weight: var(--md-sys-typescale-label-large-weight);
+          padding: 0.875rem 0.75rem 0.875rem 0.75rem; }
+          nav.materialyou-menu ul.menu li.menu-item a.is-active {
+            color: var(--md-sys-color-primary); } }
+  @media (max-width: 839px) {
+    nav.materialyou-menu ul.menu {
+      z-index: 32;
+      background-color: var(--md-sys-color-surface);
+      min-width: 7rem;
+      max-width: 17.5rem;
+      margin: 0;
+      border: 0;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem; }
+      nav.materialyou-menu ul.menu.materialyou-menu-open {
+        display: block; }
+      nav.materialyou-menu ul.menu li.menu-item {
+        margin: 0;
+        padding: 0; }
+        nav.materialyou-menu ul.menu li.menu-item a {
+          display: block;
+          color: var(--mad-sys-color-on-surface);
+          font-family: var(--md-sys-typescale-label-large-font);
+          line-height: var(--md-sys-typescale-label-large-line-height);
+          font-size: var(--md-sys-typescale-label-large-size);
+          font-weight: var(--md-sys-typescale-label-large-weight);
+          padding: 0.875rem 0.75rem 0.875rem 0.75rem; }
+          nav.materialyou-menu ul.menu li.menu-item a.is-active {
+            color: var(--md-sys-color-primary); } }
+@media (min-width: 840px) and (min-height: 600px) {
+  nav.materialyou-mobile-menu ul.menu {
+    display: block; }
+  nav.materialyou-mobile-menu div.materialyou-menu-button {
+    display: none; } }
 
 /*# sourceMappingURL=materialyou.css.map */
