--- a/scss/materialyou.scss
+++ b/scss/materialyou.scss
@@ -5,3 +5,4 @@
 @import "components/_top_app_bar.scss";
 @import "components/_button.scss";
 @import "components/_menu.scss";
+@import "components/_card.scss";
