--- a/scss/materialyou.scss
+++ b/scss/materialyou.scss
@@ -6,3 +6,7 @@
 @import "components/_button.scss";
 @import "components/_menu.scss";
 @import "components/_card.scss";
+@import "components/_chip.scss";
+@import "components/_form.scss";
+@import "components/_tab.scss";
+@import "components/_navigation.scss";
