--- a/templates/block/block--materialyou-account-menu.html.twig
+++ b/templates/block/block--materialyou-account-menu.html.twig
@@ -5,6 +5,7 @@
     'navigation',
     'menu--account',
     'materialyou-menu',
+    'materialyou-mobile-menu',
   ]
 %}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
