--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -21,7 +21,20 @@
         &.is-active {
           color: var(--md-sys-color-primary);
         }
-        padding: 0.875rem 0.75rem 0.875rem 0.75rem;
+        padding: 0.75rem;
+        display: flex;
+        span {
+          &.menu-icon {
+            padding: 0;
+            flex: 1 1;
+            min-width: 24px;
+            max-width: 24px;
+          }
+          &.menu-label {
+            flex: 2 2;
+            padding: calc(12px - 0.625rem) 0 calc(12px - 0.625rem) 0.75rem;
+          }
+        }
       }
     }
   }
